[workspace]
resolver = "2"
members = ["mesquitte-core", "mqtt-codec-kit"]
exclude = ["examples"]

[workspace.package]
license = "Apache-2.0"
readme = "README.md"
authors = [
    "sunj <diablur@gmail.com>",
    "qinxin0720 <qinxin_0720@live.com>",
    "fiekers <fiekersfan@gmail.com>",
]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
mqtt-codec-kit = { path = "mqtt-codec-kit", features = [
    "v4",
    "v5",
    "tokio-codec",
] }

ahash = "0.8"
async-tungstenite = "0.28"
byteorder = "1.5"
bytes = "1.7"
dashmap = "6.1"
env_logger = "0.11"
flume = "0.11"
futures = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
hashbrown = "0.15"
nanoid = "0.4"
log = "0.4"
openraft = { version = "0.10", git = "https://github.com/datafuselabs/openraft.git", branch = "main" }
parking_lot = "0.12"
pin-project-lite = "0.2"
rand = "0.8"
rust-rocksdb = { version = "0.30", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2.1"
s2n-quic = "1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.40"
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = "0.7"
tonic = "0.12"
tonic-build = "0.12"
tungstenite = "0.24"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
debug = true
