[workspace]
resolver = "2"
members = ["mesquitte-core", "mqtt-codec-kit"]
exclude = ["examples"]

[workspace.package]
license = "Apache-2.0"
readme = "README.md"
authors = [
    "sunj <diablur@gmail.com>",
    "qinxin0720 <qinxin_0720@live.com>",
    "fiekers <fiekersfan@gmail.com>",
]
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
mqtt-codec-kit = { version = "1.0", path = "mqtt-codec-kit", features = [
    "v4",
    "v5",
    "tokio-codec",
] }

async-tungstenite = "0.28"
axum = { version = "0.8.0-alpha.1", default-features = false }
backon = { version = "1.2", default-features = false }
bincode = "1.3"
byteorder = "1.5"
bytes = "1.7"
dashmap = "6.1"
env_logger = "0.11"
flume = "0.11"
foldhash = "0.1"
futures = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
heed = { version = "0.20", default-features = false }
maplit = "1.0"
mobc = "0.8"
nanoid = "0.4"
log = "0.4"
parking_lot = "0.12"
pin-project-lite = "0.2"
openraft = { version = "0.10", git = "https://github.com/databendlabs/openraft.git", branch = "main" }
rand = "0.8"
rust-rocksdb = { version = "0.31", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2.2"
s2n-quic = "1"
serde = "1.0"
tarpc = "0.34"
tempfile = "3.13"
thiserror = "1.0"
tokio = "1.40"
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = "0.7"
tungstenite = "0.24"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
debug = true
