[workspace]
resolver = "3"
members = ["mesquitte-core", "mqtt-codec-kit"]
exclude = ["examples"]

[workspace.package]
license = "Apache-2.0"
readme = "README.md"
authors = [
    "sunj <diablur@gmail.com>",
    "qinxin0720 <qinxin_0720@live.com>",
    "fikers <fikersfan@gmail.com>",
]
edition = "2024"
rust-version = "1.86"

[workspace.dependencies]
mqtt-codec-kit = { version = "1.0", path = "mqtt-codec-kit", features = [
    "v4",
    "v5",
    "tokio-codec",
] }

axum = { version = "0.8", default-features = false }
backon = { version = "1.5", default-features = false }
bincode = "1.3"
byteorder = "1.5"
bytes = "1.10"
dashmap = "6.1"
env_logger = "0.11"
foldhash = "0.2"
futures = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
kanal = "0.1"
maplit = "1.0"
mobc = "0.9"
nanoid = "0.4"
log = "0.4"
parking_lot = "0.12"
pin-project-lite = "0.2"
openraft = { version = "0.10", git = "https://github.com/databendlabs/openraft.git", branch = "main" }
rand = "0.9"
rust-rocksdb = { version = "0.43", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2.2"
s2n-quic = "1"
serde = "1.0"
tarpc = "0.37"
tempfile = "3.22"
thiserror = "2.0"
tokio = "1.47"
tokio-rustls = { version = "0.26", default-features = false }
tokio-tungstenite = "0.27"
tokio-util = "0.7"
tungstenite = "0.27"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
debug = true
