[package]
name = "mesquitte-core"
version = "0.1.0"
description = "MQTT v3.1.1/v5.0 library."
authors.workspace = true
license.workspace = true
keywords = ["mqtt", "quic", "network", "async"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/mesquitte/mesquitte"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "quic"
path = "examples/quic.rs"
required-features = ["quic"]

[[example]]
name = "tcp"
path = "examples/tcp.rs"
required-features = ["mqtt"]

[[example]]
name = "ws"
path = "examples/ws.rs"
required-features = ["ws"]

[[test]]
name = "raft"
path = "tests/raft_test.rs"
required-features = ["cluster", "rocksdb-storage"]

[features]
default = [
    "v4",
    "mqtt",
    "mqtts",
    "ws",
    "wss",
    "quic",
    "log",
    "cluster",
    "rocksdb-storage",
]

v4 = ["mqtt-codec-kit/v4"]
v5 = ["mqtt-codec-kit/v5"]
mqtt = []
mqtts = ["rustls"]
ws = ["tokio-tungstenite", "tungstenite"]
wss = ["tokio-tungstenite", "tungstenite", "rustls"]
quic = ["s2n-quic"]
rustls = [
    "tokio-tungstenite?/rustls-tls-webpki-roots",
    "rustls/aws-lc-rs",
    "rustls-pemfile",
    "tokio-rustls/aws-lc-rs",
]
cluster = ["axum", "backon", "bincode", "mobc", "openraft", "serde", "tarpc"]
rocksdb-storage = ["rust-rocksdb"]
log = ["dep:log"]

[dependencies]
axum = { workspace = true, features = [
    "http1",
    "json",
    "tokio",
], optional = true }
backon = { workspace = true, features = ["tokio-sleep"], optional = true }
bincode = { workspace = true, features = ["serde"], optional = true }
byteorder.workspace = true
bytes.workspace = true
dashmap.workspace = true
foldhash.workspace = true
futures.workspace = true
futures-sink.workspace = true
futures-util.workspace = true
kanal.workspace = true
log = { workspace = true, optional = true }
mqtt-codec-kit = { workspace = true, features = [
    "tokio-codec",
], optional = true }
mobc = { workspace = true, optional = true }
nanoid.workspace = true
parking_lot.workspace = true
pin-project-lite.workspace = true
openraft = { workspace = true, features = [
    "serde",
    "type-alias",
], optional = true }
rand.workspace = true
rust-rocksdb = { workspace = true, features = [
    "io-uring",
    "zstd",
    "zstd-static-linking-only",
    "bindgen-runtime",
], optional = true }
rustls = { workspace = true, default-features = false, optional = true }
rustls-pemfile = { workspace = true, optional = true }
s2n-quic = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tarpc = { workspace = true, features = [
    "tokio1",
    "serde-transport",
    "serde-transport-bincode",
    "tcp",
], optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "time",
    "net",
] }
tokio-rustls = { workspace = true, default-features = false, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["codec"] }
tungstenite = { workspace = true, optional = true }

[build-dependencies]

[dev-dependencies]
env_logger.workspace = true
maplit.workspace = true
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tempfile.workspace = true
