[package]
name = "mqtt-codec-kit"
version = "1.0.1"
description = "MQTT v3.1.1/v5.0 protocol async codec."
authors.workspace = true
license.workspace = true
keywords = ["mqtt", "codec", "network", "async"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/mesquitte/mesquitte"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
v4 = []
v5 = []
parse = ["tokio/io-util"]
tokio-codec = ["tokio-util/codec", "bytes"]

[dependencies]
byteorder.workspace = true
bytes = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

[dev-dependencies]
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
